SOURCE_CODE/.metadata/.plugins/org.eclipse.cdt.ui/LAB2.build.log
01:47:26 **** Incremental Build of configuration Debug for project LAB2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:60:34: error: 'D_GPIO_Port' undeclared (first use in this function); did you mean 'EN0_GPIO_Port'?
   60 | #define D_HIGH HAL_GPIO_WritePin(D_GPIO_Port, D_Pin, GPIO_PIN_SET)
      |                                  ^~~~~~~~~~~
../Core/Src/main.c:126:4: note: in expansion of macro 'D_HIGH'
  126 |    D_HIGH();
      |    ^~~~~~
../Core/Src/main.c:60:34: note: each undeclared identifier is reported only once for each function it appears in
   60 | #define D_HIGH HAL_GPIO_WritePin(D_GPIO_Port, D_Pin, GPIO_PIN_SET)
      |                                  ^~~~~~~~~~~
../Core/Src/main.c:126:4: note: in expansion of macro 'D_HIGH'
  126 |    D_HIGH();
      |    ^~~~~~
../Core/Src/main.c:60:47: error: 'D_Pin' undeclared (first use in this function)
   60 | #define D_HIGH HAL_GPIO_WritePin(D_GPIO_Port, D_Pin, GPIO_PIN_SET)
      |                                               ^~~~~
../Core/Src/main.c:126:4: note: in expansion of macro 'D_HIGH'
  126 |    D_HIGH();
      |    ^~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

01:47:26 Build Failed. 3 errors, 0 warnings. (took 296ms)

